--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,5 +4,9 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <div>
+        <a class="btn btn-primary" asp-area="" asp-controller="Room" asp-action="Index">Room</a>
+        <a class="btn btn-primary" asp-area="" asp-controller="Guest" asp-action="Index">Guest</a>
+        <a class="btn btn-primary" asp-area="" asp-controller="Reservation" asp-action="Index">Reservation</a>
+    </div>
 </div>
