--- a/Views/Reservation/Index.cshtml
+++ b/Views/Reservation/Index.cshtml
@@ -9,14 +9,14 @@
 <div class="d-flex justify-content-end mb-3">
     <form asp-action="Index" method="get" class="form-inline">
         <input type="text" name="searchString" class="form-control mr-2 mb-2" placeholder="Search by guest email" />
-        <button type="submit" class="btn btn-primary">Search</button>
+        <button type="submit" class="btn btn-primary mb-2">Search</button>
     </form>
 </div>
 <p>
-    <a asp-action="Create" class="btn btn-primary">Create New</a>
+    <a asp-action="Create" class="btn btn-success mb-3">Create New</a>
 </p>
-<table class="table bg-black text-white">
-    <thead>
+<table class="table table-striped table-hover">
+    <thead class="thead-dark">
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.CheckInDate)
@@ -34,26 +34,27 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.CheckInDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CheckOutDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Guest.Email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Room.Name)
-            </td>
+        @foreach (var item in Model)
+        {
+            <tr>
                 <td>
-                    <a class="btn text-white btn-sm btn-outline-white" asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a class="btn text-white btn-sm btn-outline-white" asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a class="btn text-white btn-sm btn-outline-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    @Html.DisplayFor(modelItem => item.CheckInDate)
                 </td>
-        </tr>
-}
+                <td>
+                    @Html.DisplayFor(modelItem => item.CheckOutDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Guest.Email)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Room.Name)
+                </td>
+                <td>
+                    <a class="btn btn-info btn-sm" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                    <a class="btn btn-secondary btn-sm" asp-action="Details" asp-route-id="@item.Id">Details</a>
+                    <a class="btn btn-danger btn-sm" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
