--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/HotelManager.styles.css" asp-append-version="true" />
 </head>
-<body class="bg-black text-white">
+<body class="bg-white text-dark">
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
             <div class="container-fluid">
@@ -34,7 +34,7 @@
         </nav>
     </header>
     <div class="container">
-        <main role="main" class="pb-3 ">
+        <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
